Fix styles for collapsed toolbar

--- a/apps/common/main/resources/less/colors-table-dark.less
+++ b/apps/common/main/resources/less/colors-table-dark.less
@@ -203,6 +203,7 @@
 
         --border-sidemenu: var(--scaled-one-pixel, 1px) solid var(--border-toolbar);
         --background-statusbar: var(--background-pane);
+        --border-toolbar-z-clear: var(--border-toolbar);
         --shadow-toolbar: 0px 1px 0 0 var(--border-toolbar);
 
         --background-fill-input: var(--background-normal);
