--- a/apps/common/main/resources/less/colors-table-white.less
+++ b/apps/common/main/resources/less/colors-table-white.less
@@ -182,6 +182,7 @@
         --border-radius-toolbar: 8px;
         --toolbar-tab-radius: 5px;
         --background-statusbar: var(--background-toolbar);
+        --border-toolbar-z-clear: transparent;
         --shadow-toolbar: 0px 1px 3px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.06);
         --shadow-side-panel: 0px 4px 6px -1px rgba(0, 0, 0, 0.10), 0px 2px 4px -1px rgba(0, 0, 0, 0.06);
         --layout-padding-toolbar: 0 10px;
