--- a/apps/common/main/resources/less/colors-table.less
+++ b/apps/common/main/resources/less/colors-table.less
@@ -238,6 +238,7 @@
     --toolbar-tab-radius: 0;
     --border-sidemenu: var(--scaled-one-pixel, 1px) solid var(--border-toolbar);
     --background-statusbar: var(--background-pane);
+    --border-toolbar-z-clear: var(--border-toolbar);
     --shadow-toolbar: 0px 1px 0 0 var(--border-toolbar);
     --shadow-side-panel: none;
     --layout-padding-toolbar: 0;
@@ -486,6 +487,7 @@
 // new
 @border-sidemenu: var(--border-sidemenu);
 @background-statusbar: var(--background-statusbar);
+@border-toolbar-z-clear: var(--border-toolbar-z-clear);
 @shadow-toolbar: var(--shadow-toolbar, none);
 @shadow-side-panel: var(--shadow-side-panel, none);
 @border-radius-toolbar: var(--border-radius-toolbar,0);
